2005-11-15  Sven Panne  <sven.panne@aedion.de>

	* src/al_distance.c: Implemented missing distance models and
	(hopefully) fixed the existing ones. This will probably need more
	thoughts and thorough testing...

	* src/Makefile.in, src/al_distance.c, src/al_distance.h, src/al_state.c,
	src/alc/alc_context.c: Moved doppler and distance model setters to where
	they belong. Removed some arbitraty restrictions (MIN_DOPPLER,
	MAX_DOPPLER, MIN_DOPPLER_VELOCITY, MAX_DOPPLER_VELOCITY), they were not
	spec conformant. If things go wrong now, something else has to be fixed! 
	The default distance model is now AL_INVERSE_DISTANCE_CLAMPED (not
	AL_INVERSE_DISTANCE), as required by the spec. All distance models are
	accepted now, although not all have been actually implemented
	yet. Started to refactor setters a bit ("Set internal state in generic
	frontend and notify backend about the change.").

	* src/al_doppler.c: Removed.

2005-11-14  Sven Panne  <sven.panne@aedion.de>

	* src/Makefile.in, src/al_error.c, src/al_error.h, src/al_ext.c,
	src/al_ext.h, src/al_state.c, src/al_types.h, src/alc/alc_context.c,
	src/alc/alc_error.c: First steps towards cleaning up and refactoring the
	per-context state management.

	* src/al_able.c: Removed.

	* src/al_ext.h, src/alc/alc_context.c: Cleaned up
	_alGetExtensionProcAddress mess a tiny bit.

2005-11-11  Sven Panne  <sven.panne@aedion.de>

	* src/al_able.c: Set an AL_INVALID_OPERATION when there is no current
	context to ease debugging.

	* src/al_able.c, src/al_distance.c, src/al_state.c: What to do exactly
	regarding error handling when there is no current context is a little
	bit of a dark corner in the spec. But under every interpretation of the
	spec, setting an ALC error is completely wrong. Now we call the internal
	error setter with AL_INVALID_OPERATION, even when there is no current
	context to record the error. This makes debugging easier and the error
	could e.g. be reported to the user in some other way if desired.
